# prospector-jobs

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
prospector_jobs/: config.py  dedup.py  main.py  models.py  notifier.py  scorer.py  storage.py
prospector_jobs/scrapers/: __init__.py  aboveboard.py  base.py  indeed.py  linkedin.py  wellfound.py
tests/: conftest.py  test_dedup.py  test_models.py  test_scorer.py  test_scrapers.py
